// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Questions should render a list of questions with delete and edit options for an ADMIN user 1`] = `
<div>
  <div>
    <div
      className="questionContainer"
    >
      <div
        className="questionNumber"
      >
        1
      </div>
      <div
        className="questionDescription"
      >
        testDescription
      </div>
      <div
        className="options"
      >
        <a
          className="deleteOption linkStandard"
          href="/"
          id="deleteQuestionRow"
          onClick={[Function]}
        >
          <i
            className="fas fa-trash-alt red"
          />
           Delete
        </a>
        <a
          className="edit linkStandard"
          href="/editQuestion"
          id="editQuestionRow"
          onClick={[Function]}
        >
          <i
            className="fas fa-edit blue"
          />
           Edit
        </a>
      </div>
    </div>
  </div>
  <div>
    <div
      className="questionContainer"
    >
      <div
        className="questionNumber"
      >
        2
      </div>
      <div
        className="questionDescription"
      >
        testDescription2
      </div>
      <div
        className="options"
      >
        <a
          className="deleteOption linkStandard"
          href="/"
          id="deleteQuestionRow"
          onClick={[Function]}
        >
          <i
            className="fas fa-trash-alt red"
          />
           Delete
        </a>
        <a
          className="edit linkStandard"
          href="/editQuestion"
          id="editQuestionRow"
          onClick={[Function]}
        >
          <i
            className="fas fa-edit blue"
          />
           Edit
        </a>
      </div>
    </div>
  </div>
  <div>
    <div
      className="questionContainer"
    >
      <div
        className="questionNumber"
      >
        3
      </div>
      <div
        className="questionDescription"
      >
        testDescription3
      </div>
      <div
        className="options"
      >
        <a
          className="deleteOption linkStandard"
          href="/"
          id="deleteQuestionRow"
          onClick={[Function]}
        >
          <i
            className="fas fa-trash-alt red"
          />
           Delete
        </a>
        <a
          className="edit linkStandard"
          href="/editQuestion"
          id="editQuestionRow"
          onClick={[Function]}
        >
          <i
            className="fas fa-edit blue"
          />
           Edit
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Questions should render a list of questions with only the view option for a READ-ONLY user 1`] = `
<div>
  <div>
    <div
      className="questionContainer"
    >
      <div
        className="questionNumber"
      >
        1
      </div>
      <div
        className="questionDescription"
      >
        testDescription
      </div>
      <div
        className="options"
      >
        <a
          className="view linkStandard"
          href="/viewQuestion"
          onClick={[Function]}
        >
          <i
            className="far fa-eye blue"
          />
           View
        </a>
      </div>
    </div>
  </div>
  <div>
    <div
      className="questionContainer"
    >
      <div
        className="questionNumber"
      >
        2
      </div>
      <div
        className="questionDescription"
      >
        testDescription2
      </div>
      <div
        className="options"
      >
        <a
          className="view linkStandard"
          href="/viewQuestion"
          onClick={[Function]}
        >
          <i
            className="far fa-eye blue"
          />
           View
        </a>
      </div>
    </div>
  </div>
  <div>
    <div
      className="questionContainer"
    >
      <div
        className="questionNumber"
      >
        3
      </div>
      <div
        className="questionDescription"
      >
        testDescription3
      </div>
      <div
        className="options"
      >
        <a
          className="view linkStandard"
          href="/viewQuestion"
          onClick={[Function]}
        >
          <i
            className="far fa-eye blue"
          />
           View
        </a>
      </div>
    </div>
  </div>
</div>
`;
